# cpp-tests-actions

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: main.cpp
